refs #708 and #825 - cleanup, RMIF can take packets up to 32768 +add various checkstyle suppress warning for magic numbers +in private launchInputMacro(..) add in 4.1, it should use nxm.sys.lib.Data.getBPA(format) vs hardcoding a couple if checks and changed default yDelta (if not specified) from 1 second to 5 to reduce the number of data packets and potentially the RMIF packet overflow issue +